force-app/main/default/objects/Account/fields/Total_Opportunity_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity_Line_Items__c</fullName>
    <label>Total Opportunity Line Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>